Fixed image comment not showing on single images

--- a/src/app/components/img-swiper/img-swiper.component.scss
+++ b/src/app/components/img-swiper/img-swiper.component.scss
@@ -17,6 +17,8 @@
         height: 100%;
         width: 100%;
         object-fit: cover;
+        position: relative;
+        flex-grow: 1;
     }
     
     ion-slides {
